--- a/nutreenavigation/pom.xml
+++ b/nutreenavigation/pom.xml
@@ -27,6 +27,50 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		
+		
+		<!-- mysql dependency -->
+		<dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>5.1.31</version>
+    	</dependency>
+    	
+    	<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>   
+        <dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+    	</dependency> 
+    	<!-- Jackson JSON Mapper -->
+  		<dependency>
+   			<groupId>org.codehaus.jackson</groupId>
+   			<artifactId>jackson-mapper-asl</artifactId>
+   			<version>1.9.13</version>
+  		</dependency>
+  		<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+     <artifactId>jackson-databind</artifactId>
+     <version>2.8.4</version>
+</dependency>
+
+<dependency>
+     <groupId>com.fasterxml.jackson.core</groupId>
+     <artifactId>jackson-annotations</artifactId>
+     <version>2.8.4</version>
+</dependency>
+
+<dependency>
+     <groupId>com.fasterxml.jackson.core</groupId>
+     <artifactId>jackson-core</artifactId>
+     <version>2.8.4</version>
+ </dependency>
+    	
 	</dependencies>	
   <properties>
 		<spring.version>4.3.3.RELEASE</spring.version>
